refactored, now create the animations

--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -43,13 +43,10 @@
         <div class="form-group" id="analysisTypeGroup">
           <label for="analysisType">Analysis Type</label>
           <select class="form-control" id="analysisType">
-            <!-- <option disabled selected value="">Analysis Type</option> -->
-            <option selected value="">Analysis Type</option>
+            <option disabled selected value="">Analysis Type</option>
             <option value="convexHull">Convex Hull Areas</option>
-            <!-- <option disabled value="scanpathLength">Scanpath Length</option> -->
-            <option value="scanpathLength">Scanpath Length</option>
-            <!-- <option disabled value="scanpathVelocity">Scanpath Velocity</option> -->
-            <option value="scanpathVelocity">Scanpath Velocity</option>
+            <option disabled value="scanpathLength">Scanpath Length</option>
+            <option disabled value="scanpathVelocity">Scanpath Velocity</option>
           </select>
         </div>
 
