--- a/client/pages/participants/Participant.html
+++ b/client/pages/participants/Participant.html
@@ -17,6 +17,8 @@
       {{/each}}
     {{/if}}
 
+    <div>{{json participant}}</div>
+
     <div class="row">
       <div class="col-md-6">
         <img src="{{fileURL participant.image}}" class="image-full-width">
