--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -6,8 +6,8 @@
       <h3 class="m-t-0">Viewing #{{viewing.number}}</h3>
       <p>
         <div>
-          <strong>Datafile:</strong>
-          <a href="">{{viewing.datafileName}}</a>
+          <strong>Participant:</strong>
+          <a href="/studies/{{viewing.studyId}}/participants/{{viewing.participant._id}}">{{viewing.participantName}}</a>
         </div>
         <div>
           <strong>Area of Interest:</strong>
