calculate average hull areas, still need to calculate percentages of image area

--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -40,7 +40,8 @@
         <div>
           <strong>Average Convex Hull Size (Slide Method): </strong>
           {{#if viewing.averageSlideHullSize}}
-            {{decimalToPercent viewing.averageSlideHullSize}}%
+            <!-- {{decimalToPercent viewing.averageSlideHullSize}}% -->
+            {{formatNumber viewing.averageSlideHullSize}}
           {{/if}}
         </div>
         <div>
