--- a/client/pages/aois/Aoi.html
+++ b/client/pages/aois/Aoi.html
@@ -9,11 +9,12 @@
         {{/unless}}
       {{/if}}
     </h3>
+
     <div>{{json aoi}}</div>
 
     <div class="row">
       <div class="col-md-6">
-        <img src="{{fileURL aoi.image}}" class="image-full-width">
+        <img src="{{fileURL aoi.image.imagefile}}" class="image-full-width">
       </div>
     </div>
   {{/if}}
