--- a/client/pages/images/Image.html
+++ b/client/pages/images/Image.html
@@ -12,7 +12,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <img src="{{fileURL image}}" class="image-full-width">
+        <img src="{{fileURL imagefile}}" class="image-full-width">
       </div>
     </div>
   {{/if}}
