--- a/client/pages/studies/Study.html
+++ b/client/pages/studies/Study.html
@@ -37,8 +37,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-6">
         {{> AnalysesList}}
+      </div>
+      <div class="col-md-6">
+        {{> VariablesList}}
       </div>
     </div>
   {{/if}}
