--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -18,6 +18,14 @@
 
     <p>{{analysis.desc}}</p>
 
+    <!-- {{#if participants.count}}
+      <div><strong>Participants: </strong>
+        {{#each participant in participants}}
+          <a href="/studies/{{study._id}}/analyses/{{analysis._id}}/participants/{{participant._id}}">{{participant.name}}</a>
+        {{/each}}
+      </div>
+    {{/if}} -->
+
     {{#if analysis.period}}
     <div><strong>Period (ms):</strong> {{formatNumber analysis.period}}</div>
     {{/if}}
@@ -60,178 +68,12 @@
     <!-- {{json showAoiIds}} -->
 
 
-
-
-
-
-
-
     {{#if viewings.count}}
       <div class="row">
-        <div class="col-md-6">
-          <div class="well">
-            {{> PlotHistogram x=durations layout=durationsLayout name="Viewing-Durations"}}
-            <table class="m-t-20">
-              <tbody>
-                <tr>
-                  <tr>
-                    <th>n:&nbsp;</th>
-                    <td>
-                      {{#if durations}}
-                        {{formatNumber durations.length}}
-                      {{/if}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>Minimum:&nbsp;</th>
-                    <td>
-                      {{#if durationMin}}
-                        {{millisecondsToHMSMS durationMin}}
-                        [{{formatNumber durationMin}}]
-                      {{/if}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>Maximum:&nbsp;</th>
-                    <td>
-                      {{#if durationMax}}
-                        {{millisecondsToHMSMS durationMax}}
-                        [{{formatNumber durationMax}}]
-                      {{/if}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>Range:&nbsp;</th>
-                    <td>
-                      {{#if durationRange}}
-                        {{millisecondsToHMSMS durationRange}}
-                        [{{formatNumber durationRange}}]
-                      {{/if}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>Mean:&nbsp;</th>
-                    <td>
-                      {{#if durationMean}}
-                        {{millisecondsToHMSMS durationMean}}
-                        [{{formatNumber durationMean}}]
-                      {{/if}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>Median:&nbsp;</th>
-                    <td>
-                      {{#if durationMedian}}
-                        {{millisecondsToHMSMS durationMedian}}
-                        [{{formatNumber durationMedian}}]
-                      {{/if}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>Skewness:&nbsp;</th>
-                    <td>
-                      {{#if durationSkewness}}
-                        {{formatNumber durationSkewness}}
-                      {{/if}}
-                    </td>
-                  </tr>
-                  <tr>
-                    <th>Kurtosis:&nbsp;</th>
-                    <td>
-                      {{#if durationKurtosis}}
-                        {{formatNumber durationKurtosis}}
-                      {{/if}}
-                    </td>
-                  </tr>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-
-        <div class="col-md-6">
-          <div class="well">
-            {{> PlotHistogram data=viewingCountsData layout=viewingCountsLayout name="Viewing-Counts"}}
-
-            <table class="m-t-20">
-              <tbody>
-                <tr>
-                  <th>n:&nbsp;</th>
-                  <td>
-                    {{#if viewingCounts}}
-                      {{formatNumber viewingCounts.length}}
-                    {{/if}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>Minimum:&nbsp;</th>
-                  <td>
-                    {{#if viewingCountsMin}}
-                      {{formatNumber viewingCountsMin}}
-                    {{/if}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>Maximum:&nbsp;</th>
-                  <td>
-                    {{#if viewingCountsMax}}
-                      {{formatNumber viewingCountsMax}}
-                    {{/if}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>Range:&nbsp;</th>
-                  <td>
-                    {{#if viewingCountsRange}}
-                      {{formatNumber viewingCountsRange}}
-                    {{/if}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>Mean:&nbsp;</th>
-                  <td>
-                    {{#if viewingCountsMean}}
-                      {{formatNumber viewingCountsMean}}
-                    {{/if}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>Median:&nbsp;</th>
-                  <td>
-                    {{#if viewingCountsMedian}}
-                      {{formatNumber viewingCountsMedian}}
-                    {{/if}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>Skewness:&nbsp;</th>
-                  <td>
-                    {{#if viewingCountsSkewness}}
-                      {{formatNumber viewingCountsSkewness}}
-                    {{/if}}
-                  </td>
-                </tr>
-                <tr>
-                  <th>Kurtosis:&nbsp;</th>
-                  <td>
-                    {{#if viewingCountsKurtosis}}
-                      {{formatNumber viewingCountsKurtosis}}
-                    {{/if}}
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+        {{> PlotViewingDurations viewings=viewings}}
+        {{> PlotViewingCounts viewings=viewings}}
       </div>
     {{/if}}
-
-
-
-
-
-
 
 
     {{#if viewings.count}}
