--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -8,6 +8,7 @@
           &nbsp;<a href="#" class="update-analysis"><i class="fa fa-pencil"></i></a>
         {{/unless}}
       {{/if}}
+      <button class="pull-right btn btn-success download-as-csv"><i class="fa fa-table"></i>&nbsp;Download Data as .CSV</button>
       {{#unless makeViewingsJobsComplete}}
         <span class="label label-default">Creating Viewings
           {{makeViewingsJobsProgress}}%
@@ -17,14 +18,6 @@
     </h3>
 
     <p>{{analysis.desc}}</p>
-
-    <!-- {{#if participants.count}}
-      <div><strong>Participants: </strong>
-        {{#each participant in participants}}
-          <a href="/studies/{{study._id}}/analyses/{{analysis._id}}/participants/{{participant._id}}">{{participant.name}}</a>
-        {{/each}}
-      </div>
-    {{/if}} -->
 
     {{#if analysis.period}}
     <div><strong>Period (ms):</strong> {{formatNumber analysis.period}}</div>
