--- a/client/pages/participants/UpdateParticipant.html
+++ b/client/pages/participants/UpdateParticipant.html
@@ -26,7 +26,9 @@
 
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
       {{/autoForm}}
 
 
