--- a/client/pages/studies/Study.html
+++ b/client/pages/studies/Study.html
@@ -33,7 +33,7 @@
         {{> AoisList}}
       </div>
       <div class="col-md-6">
-        {{> ImagesList}}
+        {{> StimuliList}}
       </div>
     </div>
     <div class="row">
