--- a/client/pages/aois/Aoi.html
+++ b/client/pages/aois/Aoi.html
@@ -14,7 +14,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <img src="{{fileURL aoi.image.imagefile}}" class="image-full-width">
+        <img src="{{fileURL aoi.stimulus.stimulusfile}}" class="image-full-width">
       </div>
     </div>
   {{/if}}
