--- a/client/pages/aois/AoisList.html
+++ b/client/pages/aois/AoisList.html
@@ -3,6 +3,7 @@
   <ul>
     {{#each aoi in aois}}
       <li>
+        {{aoi.stimulus.name}}
         <a href="/studies/{{study._id}}/aois/{{aoi._id}}">{{aoi.name}}</a>
       </li>
     {{/each}}
