before change fa icons

--- a/client/pages/participants/ParticipantsList.html
+++ b/client/pages/participants/ParticipantsList.html
@@ -1,5 +1,5 @@
 <template name="ParticipantsList">
-  <h4>Participants {{#if participants.count}}({{participants.count}}){{/if}}</h4>
+  <!-- <h4>Participants {{#if participants.count}}({{participants.count}}){{/if}}</h4> -->
   <ul>
     {{#each participant in participants}}
       <li>
