--- a/client/pages/datafiles/Datafiles.html
+++ b/client/pages/datafiles/Datafiles.html
@@ -1,3 +1,4 @@
 <template name="Datafiles">
   {{> DatafilesList}}
+  <!-- {{> tabular table=TabularTables.DatafilesByStudy selector=selector class="table table-striped table-bordered"}} -->
 </template>
