--- a/client/pages/participants/Participants.html
+++ b/client/pages/participants/Participants.html
@@ -1,3 +1,4 @@
 <template name="Participants">
   {{> ParticipantsList}}
+  <!-- {{> tabular table=TabularTables.ParticipantsByStudy selector=selector class="table table-striped table-bordered"}} -->
 </template>
