--- a/client/pages/studies/Studies.html
+++ b/client/pages/studies/Studies.html
@@ -12,7 +12,7 @@
 
   <ul>
     {{#each studies}}
-      <li><a href="/studies/{{_id}}">{{name}}</a></li>
+      <li><a href="/studies/{{_id}}/datafiles">{{name}}</a></li>
     {{/each}}
   </ul>
 </template>
