--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -10,8 +10,8 @@
           <a href="/studies/{{viewing.studyId}}/participants/{{viewing.participant._id}}">{{viewing.participantName}}</a>
         </div>
         <div>
-          <strong>Area of Interest:</strong>
-          <a href="/studies/{{viewing.studyId}}/aois/{{viewing.aoi._id}}">{{viewing.aoiName}}</a>
+          <strong>Stimulus:</strong>
+          <a href="/studies/{{viewing.studyId}}/stimuli/{{viewing.stimulus._id}}">{{viewing.stimulus.name}}</a>
         </div>
         <div>
           <strong>Period (ms):</strong>
