--- a/client/pages/analyses/NewAnalysis.html
+++ b/client/pages/analyses/NewAnalysis.html
@@ -14,7 +14,7 @@
         {{> afQuickField name="ignoreOutsideImage"}}
         {{> afQuickField name="studyId"}}
         {{> afQuickField name="participantIds" options=participantOptions value=participantIds}}
-        {{> afQuickField name="aoiIds" options=aoiOptions value=aoiIdValues}}
+        {{> afQuickField name="stimulusIds" options=stimulusOptions value=stimulusIds}}
         <div class="form-group">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
