--- a/client/pages/datafiles/DatafilesList.html
+++ b/client/pages/datafiles/DatafilesList.html
@@ -2,10 +2,9 @@
   <h4>Eye Tracking Data Files
     {{#if datafiles.count}}
       ({{datafiles.count}})
-<span class="btn btn-success pull-right reprocess-datafiles"><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Datafiles</span>
       {{#if study.allDatafilesProcessed}}
         <span class="label label-success">All Processed</span>
-
+        <span class="btn btn-danger pull-right reprocess-datafiles"><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Datafiles</span>
       {{else}}
         <span class="label label-default">Datafiles Processing
           <i class="fa fa-spinner fa-pulse fa-fw"></i>
