--- a/client/pages/stimuli/StimuliList.html
+++ b/client/pages/stimuli/StimuliList.html
@@ -4,13 +4,13 @@
   <div>
     <table class="table table-striped">
       <thead>
-        <th>
+        <th colspan="2">
           Name
         </th>
         <th>
           Areas of Interest
         </th>
-        <th colspan=2>
+        <th>
           Reference Image (Width x Height)
         </th>
       </thead>
