--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -60,11 +60,11 @@
     </div>
 
     {{#if viewings.count}}
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-6">
           {{> PlotRegression}}
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col-md-6">
           {{> PlotHistogramViewingDurations viewings=viewings}}
