--- a/client/pages/datafiles/DatafilesList.html
+++ b/client/pages/datafiles/DatafilesList.html
@@ -1,7 +1,6 @@
 <template name="DatafilesList">
-  <h4>Eye Tracking Data Files
+  <h4>
     {{#if datafiles.count}}
-      ({{datafiles.count}})
       {{#if study.allDatafilesProcessed}}
         <span class="label label-success">All Processed</span>
         <span class="btn btn-danger pull-right reprocess-datafiles"><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Datafiles</span>
@@ -12,29 +11,33 @@
       {{/if}}
     {{/if}}
   </h4>
-  <ul>
+  <table>
     {{#each datafile in datafiles}}
-      <li>
-        {{#if datafile.preprocessing}}
-          <span class="label label-default">
-            Pre-processing
-            <i class="fa fa-spinner fa-pulse fa-fw"></i></span>
-        {{/if}}
-        {{#if datafile.processing}}
-          <span class="label label-default">
-            Processing
-            <i class="fa fa-spinner fa-pulse fa-fw"></i></span>
-        {{/if}}
-        {{#if datafile.processed}}
-          <span class="label label-success">Processed</span>
-        {{/if}}
-
-        <a href="/studies/{{study._id}}/datafiles/{{datafile._id}}" target="_top">{{datafile.name}}</a>
-
-        {{#if datafile.recordings}}
-          ({{formatNumber datafile.recordings}} fixations)
-        {{/if}}
-      </li>
+      <tr>
+        <td>
+          <a href="/studies/{{study._id}}/datafiles/{{datafile._id}}" target="_top">{{datafile.name}}</a>
+        </td>
+        <td class="p-l-10">
+          {{#if datafile.recordings}}
+            ({{formatNumber datafile.recordings}} fixations)
+          {{/if}}
+        </td>
+        <td class="p-l-10">
+          {{#if datafile.preprocessing}}
+            <span class="label label-default">
+              Pre-processing
+              <i class="fa fa-spinner fa-pulse fa-fw"></i></span>
+          {{/if}}
+          {{#if datafile.processing}}
+            <span class="label label-default">
+              Processing
+              <i class="fa fa-spinner fa-pulse fa-fw"></i></span>
+          {{/if}}
+          {{#if datafile.processed}}
+            <span class="label label-success">Processed</span>
+          {{/if}}
+        </td>
+      </tr>
     {{/each}}
-  </ul>
+  </table>
 </template>
