--- a/client/pages/analyses/UpdateAnalysis.html
+++ b/client/pages/analyses/UpdateAnalysis.html
@@ -4,15 +4,6 @@
       <h3 class="panel-title">Edit Analysis <i class="fa fa-close pull-right"></i></h3>
     </div>
     <div class="panel-body">
-      <!-- {{#autoForm collection="Analyses" doc=analysis id="updateAnalysisForm" type="update"
-        class="update-analysis-form"}}
-        {{> afQuickField name="name"}}
-        {{> afQuickField name="desc"}}
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-      {{/autoForm}} -->
-
       {{#autoForm collection="Analyses" doc=analysis id="updateAnalysisForm" type="update"
         class="update-analysis-form"}}
         {{> afQuickField name="name"}}
@@ -23,8 +14,8 @@
         {{> afQuickField name="ignoreAoiNoName"}}
         {{> afQuickField name="ignoreOutsideImage"}}
         {{> afQuickField name="studyId"}}
-        {{> afQuickField name="participantIds" options=participantOptions value=participantIds}}
-        {{> afQuickField name="stimulusIds" options=stimulusOptions value=stimulusIds}}
+        {{> afQuickField name="participantIds" options=participantOptions value=analysis.participantIds}}
+        {{> afQuickField name="stimulusIds" options=stimulusOptions value=analysis.stimulusIds}}
         <div class="form-group">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
