--- a/client/pages/analyses/Analysis.html
+++ b/client/pages/analyses/Analysis.html
@@ -3,18 +3,26 @@
     {{> UpdateAnalysis analysis=analysis}}
   {{else}}
     <h3 class="m-t-0">{{analysis.name}}
-      {{#if analysis.hasPermission 'update'}}
-        {{#unless $.Session.get 'updateAnalysis'}}
-          &nbsp;<a href="#" class="update-analysis"><i class="fa fa-pencil"></i></a>
-        {{/unless}}
+      {{#if Template.subscriptionsReady}}
+        {{#if study.datafilesProcessed}}
+          {{#if analysis.viewingsComplete}}
+            {{#if analysis.hasPermission 'update'}}
+              {{#unless $.Session.get 'updateAnalysis'}}
+                &nbsp;<a href="#" class="update-analysis"><i class="fa fa-pencil"></i></a>
+              {{/unless}}
+            {{/if}}
+            <span class="btn btn-danger pull-right reprocess-analysis m-l-10"><i class="fa fa-refresh"></i>&nbsp;&nbsp;Reprocess Analysis</span>
+            <span class="pull-right btn btn-success download-as-csv"><i class="fa fa-table"></i>&nbsp;Download Data as .CSV</span>
+          {{/if}}
+
+          {{#unless analysis.viewingsComplete}}
+            <span class="label label-default">Creating Viewings
+              {{formatNumber analysis.viewingsProgress}}%
+              <i class="fa fa-spinner fa-pulse fa-fw"></i>
+            </span>
+          {{/unless}}
+        {{/if}}
       {{/if}}
-      <button class="pull-right btn btn-success download-as-csv"><i class="fa fa-table"></i>&nbsp;Download Data as .CSV</button>
-      {{#unless makeViewingsJobsComplete}}
-        <span class="label label-default">Creating Viewings
-          {{makeViewingsJobsProgress}}%
-          <i class="fa fa-spinner fa-pulse fa-fw"></i>
-        </span>
-      {{/unless}}
     </h3>
 
     <p>{{analysis.desc}}</p>
@@ -84,9 +92,9 @@
       <h4>
         Viewings ({{viewings.count}})
 
-        {{#unless makeViewingsJobsComplete}}
+        {{#unless analysis.viewingsComplete}}
           <span class="label label-default">Creating Viewings
-            {{makeViewingsJobsProgress}}%
+            {{formatNumber analysis.viewingsProgress}}%
             <i class="fa fa-spinner fa-pulse fa-fw"></i>
           </span>
         {{/unless}}
