ignore fixations outside reference image

--- a/client/pages/analyses/NewAnalysis.html
+++ b/client/pages/analyses/NewAnalysis.html
@@ -11,7 +11,7 @@
         {{> afQuickField name="period"}}
         {{> afQuickField name="viewingGap"}}
         {{> afQuickField name="minViewingTime"}}
-        {{> afQuickField name="ignoreAoiNoName"}}
+        <!-- {{> afQuickField name="ignoreAoiNoName"}} -->
         {{> afQuickField name="ignoreOutsideImage"}}
         {{> afQuickField name="studyId"}}
         {{> afQuickField name="participantIds" options=participantOptions value=participantIds}}
