decent slider - probably should replace with d3 or custom slider

--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -106,10 +106,8 @@
         </div>
       </form>
 
-      {{> Animation viewingId=viewing._id}}
+      {{> Animation}}
 
-      <!-- <h4>Recordings {{#if recordings.count}}({{recordings.count}}){{/if}}</h4>
-      {{> tabular table=TabularTables.RecordingsByViewing selector=selector class="table table-striped table-bordered"}} -->
     {{/if}}
   {{/if}}
 </template>
